wp-content/plugins/projectdoom/doom-app/assets/css/app.css
/* ... */
.step-2 .configurator-progress .md-thumb {
	background: none;
	border:none;
}

.breadcrumbs .md-thumb:after {
	background-color:#444444;
	border:2px solid #fff;
	box-shadow: 0 0 2px 5px #444;
}

.breadcrumbs md-slider .md-track-container {
	display:none;
}

.config-head {
	margin:2em 0;
	pointer-events: none;
}

/***PROFILE*/
.insect-profile-content-holder {
	position: relative;
	/* top:-70vh; */

    margin-top: -480px;
}

@media (max-width: 1279px) and (min-width: 960px) {
	.insect-profile-content-holder {
		position: relative;
		/* top:-20vh; */
	}
}

.profile-box {
	border:3px solid #00833D;
	/* padding:20px; */
	padding:1.625em;
	margin: 2em auto;
	background-color:#fff;
	box-sizing: border-box;
}

.page-profile-container .map-container {
	position: relative;
}

.page-profile-container .map-container svg,
.page-profile-container .map-container img{
	width:100%;
	height:100%;
}
.page-profile-container .map-container svg{
	position: absolute;
    top: 0;
	opacity: 1;
	fill:transparent;
}
.page-profile-container .map-container img{

}
.page-profile-container .map-container svg .pin{
	color:#444;
	opacity: 1;
	-webkit-transition: all 0.2s ease-out;
    -moz-transition: all 0.2s ease-out;
    -o-transition: all 0.2s ease-out;
    transition: all 0.2s ease-out;
}

.page-profile-container .map-container #bedroom,
.page-profile-container .map-container #outside,
.page-profile-container .map-container #living,
.page-profile-container .map-container #kitchen,
.page-profile-container .map-container #bathroom {
	cursor: pointer;
}

.page-profile-container .map-container #bedroom.true .pin,
.page-profile-container .map-container #outside.true .pin,
.page-profile-container .map-container #living.true .pin,
.page-profile-container .map-container #kitchen.true .pin,
.page-profile-container .map-container #bathroom.true .pin {
	fill:#00833D;
	opacity: 1;	
}

.profile-pin-descriptions p{
	padding: 20px 40px;
	border-bottom:1px solid #ccc;
	padding-bottom: 30px;
	margin: 0 auto;
	
}
.profile-pin-descriptions i {
	display: block;
}
/** /
.area.true .pin {
	fill:#00833D;
}/**/

.profile-pin-descriptions p.active,
.profile-pin-descriptions p.active i,
.profile-pin-descriptions p:hover,
.profile-pin-descriptions p:hover i{
	color:#fff;
	background-color:#00833D;
}

.profile-pin-descriptions [class^="icon-"]{
	font-size: 24pt;
	position: relative;
	/* top:10px; */
	margin-right: 20px;
	
}

.profile-pin-descriptions p:last-child{
	border-bottom:none;
}

.md-slider .md-track-ticks {
	display: none;
}
/**
* 
* Page Transitions Animations
*
* 
*
* 
**/

.animate-page-switch-container {
	position:relative;
	padding-top: 40px
}

.page-insects-single .animate-page-switch-container {
	padding-top: 27px; 
}

/* .animate-page-switch {
	padding:20px;
	top: 40px;
    position: relative;
} */

/* .animate-page-switch.ng-animate {
	transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;

	position:absolute;
	top:0;
	left:0;
	right:0;
	bottom:0;
} */
/* 
.animate-page-switch.ng-leave.ng-leave-active,
.animate-page-switch.ng-enter {
	top:100%;
}
.animate-page-switch.ng-leave,
.animate-page-switch.ng-enter.ng-enter-active {
	top:0;
} */

.md-dialog-backdrop {
	background: #00833D;
    opacity: 0.9 !important;
}

.md-dialog-content p {
	color:#fff;
	font-size: 20px;
}

.stat-selector .icon.active {
	color: #FF510B;
}

/**
* 
* Gallery UI Component CSS 
*
* @App Dependencies [ angular-aria, faqs, pages, insects, products, packages, retailers, domReady ]
*
* 
**/
.macdaddy-radius {
	border-radius: 999px;
}

.toolbar-filter {
	/* margin: 2em auto; */
	margin: 1em 0;
}

.btn-filter {
	border-radius: 0;
}

.active-filter.btn-filter  {
	color:#ffffff;
	background-color:#00833D;
}

.gallery-card {
	padding: 2em;
	box-shadow: none;
}

md-card md-card-content {
	padding: 20px;
	margin-top: 20px;
}

.gallery-directive-grid {
	margin: 2em auto;
}

.gallery-card .md-card-image {
	cursor: pointer;
	border:1px solid #fff;
}

.btn-cta {
	position: relative;
	display:block;
	width:100%;
	padding: 10px;
}

.bg-box {
	position: relative;
	width: 90%; 
	height: 100%;
}

.bg-box::before {
    content: "";
    position: absolute;
    top: 32%;
    left: 0;
    right: 0;
    bottom: 0;
    border: 3px solid #00833D;
    z-index: -1;
}

.bg-image {
	width: 100%; height: 100%;
}

.product-image-holder.bg-box::before {
	
}

.product-image-holder.bg-box {
	height: auto;
}

@media (max-width: 959px) {
	.bg-box {
		margin:0 auto;
	}

	.product-filter-categories {
		margin:0 auto;
		/* width:90%; */
	}
}


/* ==|== non-semantic helper classes ========================================
   Please define your styles before this section.
   ========================================================================== */

/* prevent callout */
.nocallout {-webkit-touch-callout: none;}

/* A hack for HTML5 contenteditable attribute on mobile */
textarea[contenteditable] {-webkit-appearance: none;}

/* A workaround for S60 3.x and 5.0 devices which do not animated gif images if they have been set as display: none */
.gifhidden {position: absolute; left: -100%;}

/* For image replacement */
.ir { display: block; border: 0; text-indent: -999em; overflow: hidden; background-color: transparent; background-repeat: no-repeat; text-align: left; direction: ltr; }
.ir br { display: none; }

/* Hide from both screenreaders and browsers: h5bp.com/u */
.hidden, [ng-cloak] { display: none !important; visibility: hidden; }

/* Hide only visually, but have it available for screenreaders: h5bp.com/v */
.visuallyhidden { border: 0; clip: rect(0 0 0 0); height: 1px; margin: -1px; overflow: hidden; padding: 0; position: absolute; width: 1px; }

/* Extends the .visuallyhidden class to allow the element to be focusable when navigated to via the keyboard: h5bp.com/p */
.visuallyhidden.focusable:active, .visuallyhidden.focusable:focus { clip: auto; height: auto; margin: 0; overflow: visible; position: static; width: auto; }
/* ... */

